src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Group_Chatter_Thread__c</fullName>
        <label>Group Chatter Thread</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_SMS_Message__c</fullName>
        <label>Initial SMS Message</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMS_Feed_Id__c</fullName>
        <inlineHelpText>Stores Id of Feed for SMS Cases</inlineHelpText>
        <label>SMS Feed Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_From_Number__c</fullName>
        <inlineHelpText>Raw number that initial SMS was sent from - used to link follow up texts to sms</inlineHelpText>
        <label>SMS From Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_To_Number__c</fullName>
        <inlineHelpText>Polaris has two SMS numbers  - standard and a short code. This captures which number the original SMS was sent to</inlineHelpText>
        <label>Original Sent To Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>InternationalEscalations</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Escalations</label>
        <queue>InternationalEscalations</queue>
    </listViews>
    <listViews>
        <fullName>InternationalPlatinumGold</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Platinum/Gold</label>
        <queue>InternationalPlatinumGold</queue>
    </listViews>
    <listViews>
        <fullName>InternationalSilverBronze</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Silver/Bronze</label>
        <queue>InternationalSilverBronze</queue>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>PartnerRelations</fullName>
        <filterScope>Queue</filterScope>
        <label>Partner Relations</label>
        <queue>PartnerRelations</queue>
    </listViews>
    <listViews>
        <fullName>USEscalations</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Escalations</label>
        <queue>USEscalations</queue>
    </listViews>
    <listViews>
        <fullName>USPlatinumGold</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Platinum/Gold</label>
        <queue>USPlatinumGold</queue>
    </listViews>
    <listViews>
        <fullName>USSilverBronze</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Silver/Bronze</label>
        <queue>USSilverBronze</queue>
    </listViews>
</CustomObject>